docs: expand meme ideas

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ auto_commit.py
 # updated at 2025-10-01T09:33:05.549351
 # updated at 2025-10-02T17:24:27.820321
 # updated at 2025-10-03T09:11:16.613408
+# updated at 2025-10-06T13:18:02.208281
