test: add test case

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ auto_commit.py
 # updated at 2025-10-03T09:11:16.613408
 # updated at 2025-10-06T13:18:02.208281
 # updated at 2025-10-07T13:19:04.294240
+# updated at 2025-10-08T17:23:51.253778
