--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ auto_commit.py
 # updated at 2025-10-07T13:19:04.294240
 # updated at 2025-10-08T17:23:51.253778
 # updated at 2025-10-08T21:27:04.582972
+# updated at 2025-10-10T21:39:40.549917
