docs: expand meme ideas

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ auto_commit.py
 # updated at 2025-10-08T17:23:51.253778
 # updated at 2025-10-08T21:27:04.582972
 # updated at 2025-10-10T21:39:40.549917
+# updated at 2025-10-13T19:30:31.103959
