--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ auto_commit.py
 # updated at 2025-10-08T21:27:04.582972
 # updated at 2025-10-10T21:39:40.549917
 # updated at 2025-10-13T19:30:31.103959
+# updated at 2025-10-21T17:53:51.000207
