test: add test case

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ auto_commit.py
 # updated at 2025-10-10T21:39:40.549917
 # updated at 2025-10-13T19:30:31.103959
 # updated at 2025-10-21T17:53:51.000207
+# updated at 2025-10-21T21:03:46.957283
