--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ auto_commit.py
 # updated at 2025-10-13T19:30:31.103959
 # updated at 2025-10-21T17:53:51.000207
 # updated at 2025-10-21T21:03:46.957283
+# updated at 2025-10-22T09:56:45.805778
