test: add test case

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ auto_commit.py
 # updated at 2025-10-21T21:03:46.957283
 # updated at 2025-10-22T09:56:45.805778
 # updated at 2025-10-30T09:06:48.007362
+# updated at 2025-11-03T21:09:14.124492
