--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ auto_commit.py
 # updated at 2025-10-22T09:56:45.805778
 # updated at 2025-10-30T09:06:48.007362
 # updated at 2025-11-03T21:09:14.124492
+# updated at 2025-11-08T17:20:44.247423
