--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ auto_commit.py
 # updated at 2025-11-03T21:09:14.124492
 # updated at 2025-11-08T17:20:44.247423
 # updated at 2025-11-08T19:17:23.265358
+# updated at 2025-11-11T15:47:41.581278
