docs: expand meme ideas

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ auto_commit.py
 # updated at 2025-11-08T17:20:44.247423
 # updated at 2025-11-08T19:17:23.265358
 # updated at 2025-11-11T15:47:41.581278
+# updated at 2025-11-17T13:10:06.153370
