--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ auto_commit.py
 # updated at 2025-11-08T19:17:23.265358
 # updated at 2025-11-11T15:47:41.581278
 # updated at 2025-11-17T13:10:06.153370
+# updated at 2025-11-17T19:14:42.952241
