--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ auto_commit.py
 # updated at 2025-11-11T15:47:41.581278
 # updated at 2025-11-17T13:10:06.153370
 # updated at 2025-11-17T19:14:42.952241
+# updated at 2025-11-19T19:17:18.724770
