fix: improve punchline

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ auto_commit.py
 # updated at 2025-11-17T13:10:06.153370
 # updated at 2025-11-17T19:14:42.952241
 # updated at 2025-11-19T19:17:18.724770
+# updated at 2025-11-20T13:28:40.099883
