feat: add new joke

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ auto_commit.py
 # updated at 2025-11-19T19:17:18.724770
 # updated at 2025-11-20T13:28:40.099883
 # updated at 2025-11-27T17:39:26.600757
+# updated at 2025-12-01T13:12:06.673410
