--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ auto_commit.py
 # updated at 2025-11-20T13:28:40.099883
 # updated at 2025-11-27T17:39:26.600757
 # updated at 2025-12-01T13:12:06.673410
+# updated at 2025-12-02T21:57:31.241129
