docs: expand meme ideas

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ auto_commit.py
 # updated at 2025-11-27T17:39:26.600757
 # updated at 2025-12-01T13:12:06.673410
 # updated at 2025-12-02T21:57:31.241129
+# updated at 2025-12-08T11:31:01.995179
