--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ auto_commit.py
 # updated at 2025-12-01T13:12:06.673410
 # updated at 2025-12-02T21:57:31.241129
 # updated at 2025-12-08T11:31:01.995179
+# updated at 2025-12-10T09:59:36.018512
