chore: update catchphrases

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ auto_commit.py
 # updated at 2025-12-02T21:57:31.241129
 # updated at 2025-12-08T11:31:01.995179
 # updated at 2025-12-10T09:59:36.018512
+# updated at 2025-12-11T09:17:20.918891
