chore: update catchphrases

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ auto_commit.py
 # updated at 2025-12-08T11:31:01.995179
 # updated at 2025-12-10T09:59:36.018512
 # updated at 2025-12-11T09:17:20.918891
+# updated at 2025-12-16T13:47:35.097385
