--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ auto_commit.py
 # updated at 2025-12-10T09:59:36.018512
 # updated at 2025-12-11T09:17:20.918891
 # updated at 2025-12-16T13:47:35.097385
+# updated at 2025-12-17T09:48:43.921335
