--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ auto_commit.py
 # updated at 2025-12-16T13:47:35.097385
 # updated at 2025-12-17T09:48:43.921335
 # updated at 2025-12-23T15:23:37.710459
+# updated at 2025-12-26T15:46:18.573715
