--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ auto_commit.py
 # updated at 2025-12-23T15:23:37.710459
 # updated at 2025-12-26T15:46:18.573715
 # updated at 2025-12-30T19:59:06.122003
+# updated at 2025-12-31T19:55:38.908010
