docs: expand meme ideas

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ auto_commit.py
 # updated at 2025-12-26T15:46:18.573715
 # updated at 2025-12-30T19:59:06.122003
 # updated at 2025-12-31T19:55:38.908010
+# updated at 2026-01-06T17:28:09.783739
