--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ auto_commit.py
 # updated at 2025-12-30T19:59:06.122003
 # updated at 2025-12-31T19:55:38.908010
 # updated at 2026-01-06T17:28:09.783739
+# updated at 2026-01-07T15:04:48.045757
