--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ auto_commit.py
 # updated at 2026-01-06T17:28:09.783739
 # updated at 2026-01-07T15:04:48.045757
 # updated at 2026-01-20T09:13:26.849509
+# updated at 2026-01-23T13:52:50.664335
