test: add test case

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ auto_commit.py
 # updated at 2026-01-07T15:04:48.045757
 # updated at 2026-01-20T09:13:26.849509
 # updated at 2026-01-23T13:52:50.664335
+# updated at 2026-01-30T11:25:07.244906
