--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ auto_commit.py
 # updated at 2026-01-23T13:52:50.664335
 # updated at 2026-01-30T11:25:07.244906
 # updated at 2026-02-03T11:27:29.644213
+# updated at 2026-02-10T13:45:23.501749
