docs: expand meme ideas

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ auto_commit.py
 # updated at 2026-01-30T11:25:07.244906
 # updated at 2026-02-03T11:27:29.644213
 # updated at 2026-02-10T13:45:23.501749
+# updated at 2026-02-21T13:48:56.672366
