--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ auto_commit.py
 # updated at 2026-02-03T11:27:29.644213
 # updated at 2026-02-10T13:45:23.501749
 # updated at 2026-02-21T13:48:56.672366
+# updated at 2026-02-21T21:12:46.570725
