test: add test case

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ auto_commit.py
 # updated at 2026-02-10T13:45:23.501749
 # updated at 2026-02-21T13:48:56.672366
 # updated at 2026-02-21T21:12:46.570725
+# updated at 2026-02-24T09:58:47.961148
