--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ auto_commit.py
 # updated at 2026-02-21T13:48:56.672366
 # updated at 2026-02-21T21:12:46.570725
 # updated at 2026-02-24T09:58:47.961148
+# updated at 2026-02-27T11:17:35.091806
